--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     
         <div class="str">
             <div class="g">
-                <a href="/Страница 2/index1.html">Главная</a>
+                <a href="https://shingra2020.github.io/">Главная</a>
             </div>
             <div class="menu">
                 <a href="/партнеры/indexpr.html">Партнеры</a>
-                <a id="kn" href="/контакты/indexkn.html">Контакты</a>
+                <a id="kn" href="https://shingra2020.github.io/shingraknt/">Контакты</a>
             </div>
             <div class="shr">
                 <p>Поиск на странице</p>
@@ -33,8 +33,8 @@
     <div class="osn">
 
         <div class="a1"> 
-            <a href="/3D/index3D.html"><h3>1. Основы 3D моделирования</h3></a>
-            <a href="/Чертежи/indeChT.html"><h3>2. Основы построения чертежей</h3></a>
+            <a href="https://shingra2020.github.io/Shingra3D/"><h3>1. Основы 3D моделирования</h3></a>
+            <a href="https://shingra2020.github.io/ShingraCht/"><h3>2. Основы построения чертежей</h3></a>
             <a href="#"><h3>3. Основы создания планировок</h3></a>           
             <a href="#"><h3>4. Основы создания электрических схем</h3></a>           
             <a href="#"><h3>5. Расчеты теплоносителей</h3></a>          
